# evoskillopt

./: README.md  SkillOpt-EGT-RL_Evolutionary-Architecture-Blueprint.md  index.html  worldgeosim.md
MatrixEvoSkillOpt/: evolved-skill-opt-self-evolving-blueprint.md
evoforge/: Dockerfile  README.md  SKILL.md  docker-compose.yml  evo_forge_kafca_agent_platform.md  pyproject.toml
evoforge/docs/: evoforge_blueprint.md  metalearning_layer.md
evoforge/src/evoforge/core/: orchestrator.py
evolvedskillopt/: SKILL.md  evolved-skill-opt-v1.0-blueprint(1).md  evolved-skill-opt-v1.0-blueprint.md  evolved_skill_opt_v1.1.0_full_implementation(1).py  evolved_skill_opt_v1.1.0_full_implementation.py
evometaclaw/: SKILL.md  evolved_skillopt_v2_self_evolving.py  implement_examples_B_C_D.py
matrix-thinking/: EVOLVED_SKILL.md  SKILL.md
matrixevoskillopt/: combined-matrix-evolved-agentic-v1.0.md  evolved_skillopt_v3_agentic_combined.py
selfevo/: evolved_skillopt_v3_agentic_combined.py
